ra-318: Make style changes.

--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
@@ -141,3 +141,12 @@ input[type="search"]::-webkit-search-decoration {
  ul.applications-summary.bulk-response{
      width:200%
  }
+
+ #triple li  { width:33.333%;}
+ .three-column ul{       
+  overflow:hidden;  
+ }
+
+ .three-column li{      
+  float:left;  
+ }
