--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -2669,6 +2669,15 @@ input[type="search"]::-webkit-search-decoration {
 ul.applications-summary.bulk-response {
   width: 200%; }
 
+#triple li {
+  width: 33.333%; }
+
+.three-column ul {
+  overflow: hidden; }
+
+.three-column li {
+  float: left; }
+
 html {
   font-size: 62.5%;
   /* 1 */ }
