--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmBulkUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmBulkUnsuccessfulDecision.cshtml
@@ -14,12 +14,16 @@
         <h1 class="heading-xlarge med-btm-margin">Inform the selected candidates their applications have been unsuccessful</h1>
         <div class="inner-block hgroup grey-background">
             <br />
-            <ul>
+            <div class="three-column">
+                <ul id="triple">
                 @foreach (var application in Model.BulkRejectApplications)
                 {
-                    <li>@application.FirstName @application.LastName</li>
+                    <li>
+                        @application.FirstName @application.LastName
+                    </li>
                 }
-            </ul>
+                </ul>
+            </div>
             <br />
             @Html.RouteLink("Edit list", RecruitmentRouteNames.BulkDeclineCandidates, new { vacancyReferenceNumber = @Model.VacancyReferenceNumber })
         </div>
@@ -28,11 +32,10 @@
             An automated message will now be sent to these candidates.
             You must provide feedback explaining why they have not been selected for the role of <b>@Model.VacancyTitle</b>
         </p>
-        <h2 class="bold-small">What feedback would you like to share with these candidates?</h2>
-        @Html.FormTextAreaFor(
-            m => m.UnSuccessfulReason,
-            containerHtmlAttributes: new { @class = "form-group-compound heading-small" },
-            controlHtmlAttributes: new { @class = "form-control form-textarea-medium", type = "text", autofocus = "autofocus", spellcheck = "true" })
+        <h2 class="bold-small">What feedback would you like to share with these candidates?**</h2>
+        @Html.FormTextAreaFor(m => m.UnSuccessfulReason,
+       controlHtmlAttributes: new { @class = "width-all-3-4", type = "text", size = 12, style = "height: 200px;" },
+       labelHtmlAttributes: new { @class = "bold-small" })
         <section>
             <div class="form-group">
                 <br />
@@ -44,3 +47,4 @@
         </section>
     </div>
 }
+
