--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ConfirmBulkUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ConfirmBulkUnsuccessfulDecision.cshtml
@@ -1,6 +1,6 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
 
-@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.BulkApplicationsRejectViewModel
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.BulkApplicationsRejectViewModel
 
 @{
     ViewBag.Title = "Recruit an Apprentice - Send Bulk Unsuccessful decision";
@@ -32,7 +32,7 @@
             An automated message will now be sent to these candidates.
             You must provide feedback explaining why they have not been selected for the role of <b>@Model.VacancyTitle</b>
         </p>
-        <h2 class="bold-small">What feedback would you like to share with these candidates?**</h2>
+        <h2 class="bold-small">What feedback would you like to share with these candidates?</h2>
         @Html.FormTextAreaFor(m => m.UnSuccessfulReason,
        controlHtmlAttributes: new { @class = "width-all-3-4", type = "text", size = 12, style = "height: 200px;" },
        labelHtmlAttributes: new { @class = "bold-small" })
