--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -106,6 +106,33 @@ h2{
 
 // Dashboard 
 
+button.vacancy-filter {
+    @include core-19;
+    text-decoration: underline;
+    display: inline-block;
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    color: $link-colour;
+    cursor: pointer;
+    text-align: center;
+    line-height: 1.4;
+}
+
+button.vacancy-order {
+    @include core-19;
+    font-size: 14px;
+    text-decoration: underline;
+    display: inline-block;
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    font-weight: 700;
+}
+
 .vacancies-summary, .applications-summary {
     list-style: none;
     margin: 0;
@@ -119,6 +146,10 @@ h2{
         a {
             text-decoration: none;
             display: block;
+        }
+        button {
+            text-decoration: none;
+            width: 100%;
         }
         figure.data {
             .count {
