--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/BulkDeclineCandidates.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/BulkDeclineCandidates.cshtml
@@ -133,9 +133,12 @@
                         var firstNameSortClass = Model.VacancyApplicationsSearch.OrderByField == VacancyApplicationsSearchViewModel.OrderByFieldFirstName ?
                             Model.VacancyApplicationsSearch.Order == Order.Ascending ? "fa-sort-up" : "fa-sort-down" : "fa-sort";
                     }
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.BulkDeclineCandidatesSearch, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsSearchViewModel.OrderByFieldFirstName, newOrder).RouteValues)" class="vacancy-filter">
+                    @*<a href="@Url.RouteUrl(RecruitmentRouteNames.BulkDeclineCandidatesSearch, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsSearchViewModel.OrderByFieldFirstName, newOrder).RouteValues)" class="vacancy-filter">
                         <span class="font-black">First name <i class="fa @firstNameSortClass" aria-hidden="true"></i></span>
-                    </a>
+                    </a>*@
+                    <button class="vacancy-order font-black" name="BulkOrderApplicationsAction" value="BulkOrderApplicationsFirstName">
+                        <span class="font-black">First name <i class="fa @firstNameSortClass" aria-hidden="true"></i></span>
+                    </button>
                 </th>
                 <th>
                     <span class="font-black">Applicant ID</span>
@@ -145,27 +148,36 @@
                         var managerNotesSortClass = Model.VacancyApplicationsSearch.OrderByField == VacancyApplicationsSearchViewModel.OrderByFieldManagerNotes ?
                             Model.VacancyApplicationsSearch.Order == Order.Ascending ? "fa-sort-up" : "fa-sort-down" : "fa-sort";
                     }
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.BulkDeclineCandidatesSearch, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsSearchViewModel.OrderByFieldManagerNotes, newOrder).RouteValues)" class="vacancy-filter">
+                    @*<a href="@Url.RouteUrl(RecruitmentRouteNames.BulkDeclineCandidatesSearch, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsSearchViewModel.OrderByFieldManagerNotes, newOrder).RouteValues)" class="vacancy-filter">
                         <span class="font-black">Vacancy manager notes <i class="fa @managerNotesSortClass" aria-hidden="true"></i></span>
-                    </a>
+                    </a>*@
+                    <button class="vacancy-order font-black" name="BulkOrderApplicationsAction" value="BulkOrderApplicationsLastManagerNotes">
+                        <span class="font-black">Vacancy manager notes <i class="fa @managerNotesSortClass" aria-hidden="true"></i></span>
+                    </button>
                 </th>
                 <th>
                     @{
                         var submittedSortClass = Model.VacancyApplicationsSearch.OrderByField == VacancyApplicationsSearchViewModel.OrderByFieldSubmitted ?
                             Model.VacancyApplicationsSearch.Order == Order.Ascending ? "fa-sort-up" : "fa-sort-down" : "fa-sort";
                     }
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.BulkDeclineCandidatesSearch, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsSearchViewModel.OrderByFieldSubmitted, newOrder).RouteValues)" class="vacancy-filter">
+                    @*<a href="@Url.RouteUrl(RecruitmentRouteNames.BulkDeclineCandidatesSearch, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsSearchViewModel.OrderByFieldSubmitted, newOrder).RouteValues)" class="vacancy-filter">
                         <span class="font-black">Submitted <i class="fa @submittedSortClass" aria-hidden="true"></i></span>
-                    </a>
+                    </a>*@
+                    <button class="vacancy-order font-black" name="BulkOrderApplicationsAction" value="BulkOrderApplicationsSubmitted">
+                        <span class="font-black">Submitted <i class="fa @submittedSortClass" aria-hidden="true"></i></span>
+                    </button>
                 </th>
                 <th>
                     @{
                         var statusSortClass = Model.VacancyApplicationsSearch.OrderByField == VacancyApplicationsSearchViewModel.OrderByFieldStatus ?
                             Model.VacancyApplicationsSearch.Order == Order.Ascending ? "fa-sort-up" : "fa-sort-down" : "fa-sort";
                     }
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.BulkDeclineCandidatesSearch, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsSearchViewModel.OrderByFieldStatus, newOrder).RouteValues)" class="vacancy-filter">
+                    @*<a href="@Url.RouteUrl(RecruitmentRouteNames.BulkDeclineCandidatesSearch, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsSearchViewModel.OrderByFieldStatus, newOrder).RouteValues)" class="vacancy-filter">
                         <span class="font-black">Status <i class="fa @statusSortClass" aria-hidden="true"></i></span>
-                    </a>
+                    </a>*@
+                    <button class="vacancy-order font-black" name="BulkOrderApplicationsAction" value="BulkOrderApplicationsStatus">
+                        <span class="font-black">Status <i class="fa @statusSortClass" aria-hidden="true"></i></span>
+                    </button>
                 </th>
                 <th>
 
