--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -4,6 +4,7 @@
 @using SFA.Apprenticeships.Web.Common.Constants.ViewModels
 @using SFA.Apprenticeships.Web.Common.Extensions
 @using SFA.Apprenticeships.Web.Common.Validators.Extensions
+@using SFA.Apprenticeships.Web.Common.ViewModels
 @using SFA.Apprenticeships.Web.Raa.Common.Constants.ViewModels
 @using SFA.Apprenticeships.Web.Raa.Common.Extensions
 
@@ -92,12 +93,12 @@
                         <fieldset class="form-group inline-fixed">
                             @* ReSharper disable once Html.IdNotResolved *@
                             <label for="custom-wage-fixed" class="block-label" data-target="custom-wage-fixed-panel">
-                                @Html.RadioButtonFor(model => model.Wage.CustomType, WageType.Custom, new {id = "custom-wage-fixed", aria_controls = "custom-wage-panel"})
+                                @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Fixed, new {id = "custom-wage-fixed", aria_controls = "custom-wage-panel"})
                                 Fixed wage
                             </label>
                             @* ReSharper disable once Html.IdNotResolved *@
                             <label for="custom-wage-range" class="block-label" data-target="custom-wage-range-panel">
-                                @Html.RadioButtonFor(model => model.Wage.CustomType, WageType.CustomRange, new { id = "custom-wage-range", aria_controls = "custom-wage-panel" })
+                                @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Ranged, new { id = "custom-wage-range", aria_controls = "custom-wage-panel" })
                                 Wage range
                             </label>
                         </fieldset>
