--- a/src/SFA.Apprenticeships.Web.Manage/Views/InformationRadiator/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/InformationRadiator/Index.cshtml
@@ -136,7 +136,7 @@
                 <figure class="data">
                     <p class="count">@Model.TotalNewApplicationsInPastFourWeeks</p>
                     <figcaption>
-                        <h2>of those, total in progress (@(Math.Round((double)Model.TotalNewApplicationsInPastFourWeeks / Model.TotalApplicationsSubmittedInPastFourWeeks * 100, 1))%)</h2>
+                        <h2>of those, total not reviewed (@(Math.Round((double)Model.TotalNewApplicationsInPastFourWeeks / Model.TotalApplicationsSubmittedInPastFourWeeks * 100, 1))%)</h2>
                     </figcaption>
                 </figure>
             </li>
