--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -15,6 +15,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, select {
   border: none;
   margin: 0;
+  margin: 0;
   padding: 0; }
 
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
