--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -47,14 +47,14 @@
     @Html.HiddenFor(m => m.VacanciesSummary.VacanciesSummarySearch.FilterType)
 
     <div class="grid-wrapper">
-        <div class="grid grid-1-2">
+        <div class="grid grid-2-3">
             <h1 class="heading-xlarge">
                 Recruitment home
                 <span class="heading-secondary">@Model.ProviderViewModel.FullName</span>
             </h1>
         </div>
-        <div class="grid grid-1-2">
-            <div class="">
+        <div class="grid grid-1-3">
+            <div class="grid grid-1-1 med-btm-margin">
                 @if (Model.ProviderSites.Count == 1)
                 {
                     <p class="form-label">Provider site</p>
@@ -65,11 +65,19 @@
                 else
                 {
                     <label for="provider-site" class="form-label">Change provider site</label>
-                    @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultProviderSiteId, Model.ProviderSites, new { id = "provider-site", @class = "chosen-select grid grid-1-1" })
+                    @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultProviderSiteId, Model.ProviderSites, new {id = "provider-site", @class = "chosen-select grid grid-1-1"})
                     <noscript>
                         <button class="button" name="ChangeProviderSiteAction" value="ChangeProviderSite">Change provider site</button>
                     </noscript>
                 }
+            </div>
+            <div class="grid grid-1-1">
+                <p class="small-btm-margin">
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.ReportList)">Your reports</a>
+                </p>
+                <p class="small-btm-margin">
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.CandidateSearch)">Search candidates</a>
+                </p>
             </div>
         </div>
     </div>
@@ -330,12 +338,6 @@
         <div class="grid-wrapper">
         <div class="grid grid-1-1">
         <section>
-        <p>
-            <a href="@Url.RouteUrl(RecruitmentRouteNames.ReportList)">Your reports</a>
-        </p>
-        <p>
-            <a href="@Url.RouteUrl(RecruitmentRouteNames.CandidateSearch)">Search candidates</a>
-        </p>
         @{ var open = string.IsNullOrEmpty(searchString) ? "" : "open"; }
         <details class="@open" @open>
             <summary>Search your @vacanciesLabel</summary>
