--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -15,7 +15,6 @@ menu, nav, output, ruby, section, summary,
 time, mark, select {
   border: none;
   margin: 0;
-  margin: 0;
   padding: 0; }
 
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -4998,9 +4997,11 @@ video {
     background: #fff;
     border-color: #0b0c0c; }
 
+.tabbed-nav {
+  border-bottom: 1px solid #bfc1c3; }
+
 .tabbed-tab {
   border: 1px solid transparent;
-  border-bottom: 1px solid #bfc1c3;
   display: inline-block;
   margin-bottom: -1px;
   margin-right: 1px;
@@ -5022,11 +5023,14 @@ video {
 
 .tabbed-content {
   border: 1px solid #bfc1c3;
+  border-top: 0;
   display: none;
   margin-bottom: 15px;
   padding: 30px 10px 0; }
   .tabbed-content.active {
     display: block; }
+  .tabbed-content.no-border {
+    border: 0; }
 
 .tabbed-element {
   display: none; }
