--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/components/_forms.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/components/_forms.scss
@@ -532,3 +532,34 @@ input::-webkit-inner-spin-button {
   padding: 1em;
   background: $yellow-25;
 }
+
+.search-bar {
+  overflow:hidden;
+  position: relative;
+  .search-input-wrapper {
+    float:left;
+    box-sizing: border-box;
+    padding-right:47px;
+    width:100%;
+    input[type="search"] {
+      padding-top:7px;
+      padding-bottom: 4px;
+      padding-left: 7px;
+      box-sizing: border-box;
+      width:100%;
+    }
+  }
+  .search-btn {
+    position: absolute;
+    overflow: hidden;
+    right:0px;
+    font-size:18px;
+    padding-bottom:6px;
+    padding-left:13px;
+    padding-right:12px;
+    & span {
+      position: absolute;
+      left:-5000px;     
+    }
+  }
+}
